--- a/single.html
+++ b/single.html
@@ -286,8 +286,9 @@
                     <div class="col-md-6 col-lg-3">
                         <div class="footer-contact">
                             <h2>Office Contact</h2>
-                            <p><i class="fa fa-map-marker-alt"></i>123 Street, New York, USA</p>
-                            <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
+                            <p><i class="fa fa-map-marker-alt"></i>2Q96+4FW, Jl. Letkol Iskandar, 17 Ilir, Ilir Timur I,
+                                Palembang City, South Sumatra 30111</p>
+                            <p><i class="fa fa-phone-alt"></i>+00000000</p>
                             <p><i class="fa fa-envelope"></i>info@example.com</p>
                             <div class="footer-social">
                                 <a href=""><i class="fab fa-twitter"></i></a>
@@ -300,62 +301,37 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="footer-link">
-                            <h2>Services Areas</h2>
-                            <a href="">Building Construction</a>
-                            <a href="">House Renovation</a>
-                            <a href="">Architecture Design</a>
-                            <a href="">Interior Design</a>
-                            <a href="">Painting</a>
+                            <h2>Product</h2>
+                            <a href="">[Akan Mendatang]</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="footer-link">
-                            <h2>Useful Pages</h2>
-                            <a href="">About Us</a>
-                            <a href="">Contact Us</a>
-                            <a href="">Our Team</a>
-                            <a href="">Projects</a>
-                            <a href="">Testimonial</a>
+                            <h2>Visi Dan Misi</h2>
+                            <a href="">Visi</a>
+                            <a href="">Misi</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="newsletter">
-                            <h2>Newsletter</h2>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur facilisis ornare
-                                velit non vulpu
+                            <img src="img/ptlematang nobg.png" alt="">
+                            <p class="mt-3">
+                                PT. Lematang adalah jasa sewa alat berat yang berada di Palembang
                             </p>
-                            <div class="form">
-                                <input class="form-control" placeholder="Email here">
-                                <button class="btn">Submit</button>
-                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="container footer-menu">
-                <div class="f-menu">
-                    <a href="">Terms of use</a>
-                    <a href="">Privacy policy</a>
-                    <a href="">Cookies</a>
-                    <a href="">Help</a>
-                    <a href="">FQAs</a>
-                </div>
-            </div>
             <div class="container copyright">
                 <div class="row">
-                    <div class="col-md-6">
-                        <p>&copy; <a href="#">Your Site Name</a>, All Right Reserved.</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p>Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
-                    </div>
+                    <p class="text-center w-100">&copy; <a href="#">2025 Lematang</a>, All Right Reserved.</p>
                 </div>
             </div>
         </div>
-        <!-- Footer End -->
+    </div>
+    <!-- Footer End -->
 
-        <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
     </div>
 
     <!-- JavaScript Libraries -->
