--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,8 @@
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <link href="lib/slick/slick.css" rel="stylesheet">
     <link href="lib/slick/slick-theme.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
@@ -89,7 +91,6 @@
         <div class="nav-bar">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-                    <a href="#" class="navbar-brand">MENU</a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -99,41 +100,41 @@
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link">Tentang Perusahaan</a>
                             <a href="contact.html" class="nav-item nav-link active">Kontak</a>
+                            <a href="selflearning.html" class="nav-item nav-link">Self Learning</a>
+                        </div>
+                        <!-- Profil start -->
+                        <div class="btn-group">
+                            <button type="button" class="btn bg-transparent border-0" data-bs-toggle="dropdown"
+                                data-bs-display="static" aria-expanded="false">
+                                <img id="navbar-profile" src="https://via.placeholder.com/120" class="navbar-profile"
+                                    alt="">
 
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start">
+                                <li>
+                                    <a class="dropdown-item" href="#">
+                                        <label class="upload-btn" for="upload">Ubah Profile</label>
+                                        <input type="file" id="upload" accept="image/*">
+                                    </a>
+                                </li>
+                                <li><a class="dropdown-item" href="#">Keluar</a></li>
+                            </ul>
                         </div>
-                        <div class="ml-auto">
-                            <a class="btn" href="portfolio.html">Self Learning</a>
-                        </div>
+
+
+                        <!-- Profil end -->
                     </div>
                 </nav>
             </div>
         </div>
         <!-- Nav Bar End -->
 
-
-        <!-- Page Header Start -->
-        <div class="page-header">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <h2>Kontak Kami</h2>
-                    </div>
-                    <div class="col-12">
-                        <a href="">Home</a>
-                        <a href="">Kontak Kami</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Page Header End -->
-
-
         <!-- Contact Start -->
         <div class="contact wow fadeInUp">
             <div class="container">
                 <div class="section-header text-center">
-                    <p>Get In Touch</p>
-                    <h2>For Any Query</h2>
+                    <p>Hubungi Kami</p>
+                    <h2>Untuk Pertanyaan Apapun</h2>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
@@ -265,6 +266,9 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/slick/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+    crossorigin="anonymous"></script>
 
     <!-- Contact Javascript File -->
     <script src="mail/jqBootstrapValidation.min.js"></script>
