--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <link href="lib/slick/slick.css" rel="stylesheet">
     <link href="lib/slick/slick-theme.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
@@ -31,6 +33,7 @@
 
 <body>
     <div class="wrapper">
+
         <!-- Top Bar Start -->
         <div class="top-bar">
             <div class="container-fluid">
@@ -98,22 +101,29 @@
                             <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">Tentang Perusahaan</a>
                             <a href="contact.html" class="nav-item nav-link">Kontak</a>
-
+                            <a href="selflearning.html" class="nav-item nav-link">Self Learning</a>
                         </div>
-                        <div class="ml-auto">
-                            <a class="btn" href="portfolio.html">Self Learning</a>
+                        <!-- Profil start -->
+                        <div class="btn-group">
+                            <button type="button" class="btn bg-transparent border-0" data-bs-toggle="dropdown"
+                                data-bs-display="static" aria-expanded="false">
+                                <img id="navbar-profile" src="https://via.placeholder.com/120" class="navbar-profile"
+                                    alt="">
+
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start">
+                                <li>
+                                    <a class="dropdown-item" href="#">
+                                        <label class="upload-btn" for="upload">Ubah Profile</label>
+                                        <input type="file" id="upload" accept="image/*">
+                                    </a>
+                                </li>
+                                <li><a class="dropdown-item" href="#">Keluar</a></li>
+                            </ul>
                         </div>
-                        <div class="bg-dark d-flex justify-content-center">
-                            <div class="profile-wrapper position-relative">
-                              <img id="navbar-profile" src="https://via.placeholder.com/120" class="navbar-profile" alt="">
-                              <label class="upload-btn" for="upload">+</label>
-                              <input type="file" id="upload" accept="image/*">
-                            </div>
-                          </div>
-                          <!-- NOTE UNTUK PROFILE KETIKA DI REFLES GAMBAR PROFIL TIDAK BOLE HILANG -->
-                          
 
 
+                        <!-- Profil end -->
                     </div>
                 </nav>
             </div>
@@ -278,6 +288,9 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/slick/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+        crossorigin="anonymous"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
