--- a/selflearning.html
+++ b/selflearning.html
@@ -24,6 +24,9 @@
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <link href="lib/slick/slick.css" rel="stylesheet">
     <link href="lib/slick/slick-theme.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
@@ -89,7 +92,6 @@
         <div class="nav-bar">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-                    <a href="#" class="navbar-brand">MENU</a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -98,12 +100,30 @@
                         <div class="navbar-nav mr-auto">
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link">Tentang Perusahaan</a>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="contact.html" class="nav-item nav-link">Kontak</a>
+                            <a href="selflearning.html" class="nav-item nav-link active">Self Learning</a>
+                        </div>
+                        <!-- Profil start -->
+                        <div class="btn-group">
+                            <button type="button" class="btn bg-transparent border-0" data-bs-toggle="dropdown"
+                                data-bs-display="static" aria-expanded="false">
+                                <img id="navbar-profile" src="https://via.placeholder.com/120" class="navbar-profile"
+                                    alt="">
 
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start">
+                                <li>
+                                    <a class="dropdown-item" href="#">
+                                        <label class="upload-btn" for="upload">Ubah Profile</label>
+                                        <input type="file" id="upload" accept="image/*">
+                                    </a>
+                                </li>
+                                <li><a class="dropdown-item" href="#">Keluar</a></li>
+                            </ul>
                         </div>
-                        <div class="ml-auto">
-                            <a class="btn d-none" href="portfolio.html">Self Learning</a>
-                        </div>
+
+
+                        <!-- Profil end -->
                     </div>
                 </nav>
             </div>
@@ -124,15 +144,15 @@
         <!-- Page Header End -->
 
 
-        <!-- Portfolio Start -->
-        <div class="portfolio">
+        <!-- selflearning Start -->
+        <div class="selflearning">
             <div class="container">
                 <div class="section-header text-center">
                     <h2>Menu Self Learning</h2>
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <ul id="portfolio-flters">
+                        <ul id="selflearning-flters">
                             <li data-filter="*" class="filter-active">All</li>
                             <li data-filter=".first">Buldozer</li>
                             <li data-filter=".second">Eskavator</li>
@@ -140,104 +160,104 @@
                         </ul>
                     </div>
                 </div>
-                <div class="row portfolio-container">
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="portfolio-warp">
-                            <div class="portfolio-img">
-                                <img src="img/portfolio-1.jpg" alt="Image">
-                                <div class="portfolio-overlay">
+                <div class="row selflearning-container">
+                    <div class="col-lg-4 col-md-6 col-sm-12 selflearning-item first wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="selflearning-warp">
+                            <div class="selflearning-img">
+                                <img src="img/selflearning-1.jpg" alt="Image">
+                                <div class="selflearning-overlay">
                                     <p>
                                         Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare
                                         velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
                                     </p>
                                 </div>
                             </div>
-                            <div class="portfolio-text">
+                            <div class="selflearning-text">
                                 <h3>Project Name</h3>
                                 <a href="single.html" class="btn">></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="portfolio-warp">
-                            <div class="portfolio-img">
-                                <img src="img/portfolio-2.jpg" alt="Image">
-                                <div class="portfolio-overlay">
+                    <div class="col-lg-4 col-md-6 col-sm-12 selflearning-item second wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="selflearning-warp">
+                            <div class="selflearning-img">
+                                <img src="img/selflearning-2.jpg" alt="Image">
+                                <div class="selflearning-overlay">
                                     <p>
                                         Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare
                                         velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
                                     </p>
                                 </div>
                             </div>
-                            <div class="portfolio-text">
+                            <div class="selflearning-text">
                                 <h3>Project Name</h3>
                                 <a href="single.html" class="btn">></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="portfolio-warp">
-                            <div class="portfolio-img">
-                                <img src="img/portfolio-3.jpg" alt="Image">
-                                <div class="portfolio-overlay">
+                    <div class="col-lg-4 col-md-6 col-sm-12 selflearning-item third wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="selflearning-warp">
+                            <div class="selflearning-img">
+                                <img src="img/selflearning-3.jpg" alt="Image">
+                                <div class="selflearning-overlay">
                                     <p>
                                         Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare
                                         velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
                                     </p>
                                 </div>
                             </div>
-                            <div class="portfolio-text">
+                            <div class="selflearning-text">
                                 <h3>Project Name</h3>
                                 <a href="single.html" class="btn">></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="portfolio-warp">
-                            <div class="portfolio-img">
-                                <img src="img/portfolio-4.jpg" alt="Image">
-                                <div class="portfolio-overlay">
+                    <div class="col-lg-4 col-md-6 col-sm-12 selflearning-item first wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="selflearning-warp">
+                            <div class="selflearning-img">
+                                <img src="img/selflearning-4.jpg" alt="Image">
+                                <div class="selflearning-overlay">
                                     <p>
                                         Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare
                                         velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
                                     </p>
                                 </div>
                             </div>
-                            <div class="portfolio-text">
+                            <div class="selflearning-text">
                                 <h3>Project Name</h3>
                                 <a href="single.html" class="btn">></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="portfolio-warp border-2">
-                            <div class="portfolio-img">
-                                <img src="img/portfolio-5.jpg" alt="Image">
-                                <div class="portfolio-overlay">
+                    <div class="col-lg-4 col-md-6 col-sm-12 selflearning-item second wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="selflearning-warp border-2">
+                            <div class="selflearning-img">
+                                <img src="img/selflearning-5.jpg" alt="Image">
+                                <div class="selflearning-overlay">
                                     <p>
                                         Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare
                                         velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
                                     </p>
                                 </div>
                             </div>
-                            <div class="portfolio-text">
+                            <div class="selflearning-text">
                                 <h3>Project Name</h3>
                                 <a href="single.html" class="btn">></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="portfolio-warp">
-                            <div class="portfolio-img">
-                                <img src="img/portfolio-6.jpg" alt="Image">
-                                <div class="portfolio-overlay">
+                    <div class="col-lg-4 col-md-6 col-sm-12 selflearning-item third wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="selflearning-warp">
+                            <div class="selflearning-img">
+                                <img src="img/selflearning-6.jpg" alt="Image">
+                                <div class="selflearning-overlay">
                                     <p>
                                         Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare
                                         velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
                                     </p>
                                 </div>
                             </div>
-                            <div class="portfolio-text">
+                            <div class="selflearning-text">
                                 <h3>Project Name</h3>
                                 <a href="single.html" class="btn">></a>
                             </div>
@@ -251,7 +271,7 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio End -->
+        <!-- selflearning End -->
 
 
         <!-- Footer Start -->
@@ -320,6 +340,10 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/slick/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+        crossorigin="anonymous"></script>
+
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
