--- a/about.html
+++ b/about.html
@@ -102,6 +102,7 @@
                             <a href="about.html" class="nav-item nav-link active">Tentang Perusahaan</a>
                             <a href="contact.html" class="nav-item nav-link">Kontak</a>
                             <a href="selflearning.html" class="nav-item nav-link">Self Learning</a>
+                            <a href="visi_misi.html" class="nav-item nav-link">Visi Dan Misi</a>
                         </div>
                         <!-- Profil start -->
                         <div class="btn-group">
